<resources>
    <string name="app_name">HW1_Groups#14</string>
    <string name="billtotal">Bill Total</string>
    <string name="tip">Tip %</string>
    <string name="custom">Custom</string>
    <string name="tipText">Tip</string>
    <string name="total">Total</string>
    <string name="exit">Exit</string>
    <string name="hintBill">Enter Bill Value</string>
    <string name="tip10">10%</string>
    <string name="tip15">15%</string>
    <string name="rb18">18%</string>
    <string name="Zero">0.00</string>
</resources>
